vendor/fixed-macro/tests/compile-fail/start-with-dot.rs
fn main() {
    fixed_macro::fixed!(.12: I4F4);
}
