vendor/fixed-macro/tests/compile-fail/start-with-dot.stderr
error: expected literal
 --> $DIR/start-with-dot.rs:2:25
  |
2 |     fixed_macro::fixed!(.12: I4F4);
  |                         ^
